--- a/Navigation Bar animation/style.css
+++ b/Navigation Bar animation/style.css
@@ -13,18 +13,9 @@ header{
     align-items: center;
 }
 .navigation{
-    margin: 0;
-    bottom: 60px;
-    padding: 0;
-    left: 480px;
-    position: fixed;
-    width: 400px;
-    height: 70px;
-    background: #362B2B;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 10px;
+   background-color: #4158D0;
+background-image: linear-gradient(43deg, #4158D0 0%, #C850C0 46%, #FFCC70 100%);
+
 }
 .navigation ul{
     display: flex;
@@ -57,7 +48,7 @@ header{
     color: #FF5722;
 }
 .navigation ul li.active a .icon{
-    transform: translateY(-32px);
+    transform: translateY(-10px);
 }
 .navigation ul li a .text{
     position: absolute;
