--- a/Solar Eclipse animation/styles.css
+++ b/Solar Eclipse animation/styles.css
@@ -1,8 +1,8 @@
 body{
     display: flex;
-    /* justify-content: center; */
+    justify-content: center; 
     height: 100%;
-    /* align-items: center; */
+    align-items: center; 
     animation: colorchange 6s infinite linear;
 }
 
